based heroine's unit types on those from core they are practically the same, except for sprite/animations and advancements (including amla)

--- a/units/Enchantress.cfg
+++ b/units/Enchantress.cfg
@@ -1,59 +1,12 @@
-#textdomain wesnoth-units
+# wmllint: no translatables
 
 [unit_type]
   id=Elrilinde Elvish Enchantress
-  name= _"female^Elvish Enchantress"
-  race=elf
-  gender=female
+  [base_unit]
+    id=Elvish Enchantress
+  [/base_unit]
   image="units/oldelvish-enchantress.png"
-  profile="portraits/elves/sorceress.png"
-  hitpoints=50
-  movement_type=woodland
-  movement=5
-  experience=180
-  level=3
-  alignment=neutral
   advances_to=null
-  cost=55
-  usage=mixed fighter
-  description= _"The magic of the elves is wholly unlike that of humanity, so much so that humans are almost universally incapable of understanding it, let alone using it. Likewise, those who are masters of it are equally enigmatic; though it can be said that they are revered by their people, very little can be said about their actual function or purpose within that society."
-  die_sound={SOUND_LIST:ELF_FEMALE_HIT}
-  [resistance]
-    arcane=90
-  [/resistance]
-  [attack]
-    name=staff
-    description= _"staff"
-    type=impact
-    range=melee
-    damage=6
-    number=2
-    range=melee
-    icon=attacks/staff-elven.png
-  [/attack]
-  [attack]
-    name=entangle
-    description= _"entangle"
-    type=impact
-    [specials]
-      {WEAPON_SPECIAL_SLOW}
-    [/specials]
-    damage=5
-    number=4
-    range=ranged
-  [/attack]
-  [attack]
-    name=faerie fire
-    description= _"faerie fire"
-    type=arcane
-    damage=9
-    number=4
-    range=ranged
-    [specials]
-      {WEAPON_SPECIAL_MAGICAL}
-    [/specials]
-    icon=attacks/faerie-fire.png
-  [/attack]
   {DEFENSE_ANIM_RANGE "units/oldelvish-enchantress-ranged-defend.png" "units/oldelvish-enchantress-defend.png" {SOUND_LIST:ELF_FEMALE_HIT} melee }
   {DEFENSE_ANIM_ELVEN_RANGE "units/oldelvish-enchantress-ranged-defend.png" "units/oldelvish-enchantress-defend.png" {SOUND_LIST:ELF_FEMALE_HIT} ranged }
   [attack_anim]
