--- a/units/Sorceress.cfg
+++ b/units/Sorceress.cfg
@@ -1,61 +1,12 @@
-#textdomain wesnoth-units
+# wmllint: no translatables
 
 [unit_type]
   id=Elrilinde Elvish Sorceress
-  name= _"female^Elvish Sorceress"
-  race=elf
-  gender=female
+  [base_unit]
+    id=Elvish Sorceress
+  [/base_unit]
   image="units/oldelvish-sorceress.png"
-  profile="portraits/elves/sorceress.png"
-  hitpoints=41
-  movement_type=woodland
-  movement=5
-  experience=100
-  level=2
-  alignment=neutral
   advances_to=Elrilinde Elvish Enchantress
-  cost=34
-  usage=mixed fighter
-  description= _"The world of faerie is far more potent than the corporeal world. Simply bringing some of this world into our own can have violent results. This is well-understood by the elves, although rarely used with malicious intent; doing so is no easy task, and is a very ill-regarded use of their strength.
-
-Those able to do so are roughly titled as ‘sorceresses’ by other races; and certainly are capable of acting the part."
-  die_sound={SOUND_LIST:ELF_FEMALE_HIT}
-  [resistance]
-    arcane=100
-  [/resistance]
-  [attack]
-    name=staff
-    description= _"staff"
-    type=impact
-    range=melee
-    damage=4
-    number=2
-    range=melee
-    icon=attacks/druidstaff.png
-  [/attack]
-  [attack]
-    name=entangle
-    description= _"entangle"
-    type=impact
-    [specials]
-      {WEAPON_SPECIAL_SLOW}
-    [/specials]
-    damage=4
-    number=3
-    range=ranged
-  [/attack]
-  [attack]
-    name=faerie fire
-    description= _"faerie fire"
-    type=arcane
-    damage=7
-    number=4
-    range=ranged
-    [specials]
-      {WEAPON_SPECIAL_MAGICAL}
-    [/specials]
-    icon=attacks/faerie-fire.png
-  [/attack]
   {DEFENSE_ANIM_FILTERED "units/oldelvish-sorceress-defend.png" "units/oldelvish-sorceress.png" {SOUND_LIST:ELF_FEMALE_HIT} range=melee }
   {DEFENSE_ANIM_FILTERED "units/oldelvish-sorceress-defend.png" "units/oldelvish-sorceress.png" {SOUND_LIST:ELF_FEMALE_HIT} range=ranged }
   [attack_anim]
