--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -1,146 +1,15 @@
-#textdomain wesnoth-units
+#textdomain wesnoth-The_Memories
 
 [unit_type]
   id=Elrilinde Elvish Sylph
-  name= _"female^Elvish Sylph"
-  race=elf
-  gender=female
+  [base_unit]
+    id=Elvish Sylph
+  [/base_unit]
   image="units/oldelvish-sylph.png"
-  halo=halo/elven/shyde-stationary-halo1.png:150,halo/elven/shyde-stationary-halo2.png:150,halo/elven/shyde-stationary-halo3.png:150,halo/elven/shyde-stationary-halo4.png:150,halo/elven/shyde-stationary-halo5.png:150,halo/elven/shyde-stationary-halo6.png:150
-  hitpoints=60
-  movement_type=woodlandfloat
-  movement=6
   experience=70
-  level=4
-  alignment=neutral
   advances_to=null
-  cost=67
-  usage=mixed fighter
-  description=_"Rarely seen, the sage-like Sylphs are masters of both their faerie and mundane natures. They are possessed of wondrous, and sometimes terrifying powers. Legends concerning these have given other races a healthy fear of the elves."
-  die_sound={SOUND_LIST:ELF_FEMALE_HIT}
-  [resistance]
-    arcane=80
-  [/resistance]
-  [attack]
-    name=faerie touch
-    description= _"faerie touch"
-    icon=attacks/touch-faerie.png
-    type=impact
-    [specials]
-      {WEAPON_SPECIAL_MAGICAL}
-    [/specials]
-    range=melee
-    damage=6
-    number=3
-    range=melee
-  [/attack]
-  [attack]
-    name=gossamer
-    description= _"gossamer"
-    type=impact
-    [specials]
-      {WEAPON_SPECIAL_SLOW}
-    [/specials]
-    damage=6
-    number=5
-    range=ranged
-    icon=attacks/web.png
-  [/attack]
-  [attack]
-    name=faerie fire
-    description= _"faerie fire"
-    type=arcane
-    [specials]
-      {WEAPON_SPECIAL_MAGICAL}
-    [/specials]
-    damage=10
-    number=5
-    range=ranged
-    icon=attacks/faerie-fire.png
-  [/attack]
   {DEFENSE_ANIM_FILTERED "units/oldelvish-sylph-defend.png" "units/oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} range=melee }
   {DEFENSE_ANIM_FILTERED "units/oldelvish-sylph-defend.png" "units/oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} range=ranged }
-  [attack_anim]
-    [filter_attack]
-      name=faerie touch
-    [/filter_attack]
-    [frame]
-      begin=-200
-      end=-100
-      image="units/oldelvish-sylph-ftouch-attack1.png"
-    [/frame]
-    [frame]
-      begin=-100
-      end=100
-      image="units/oldelvish-sylph-ftouch-attack2.png"
-    [/frame]
-    [frame]
-      begin=100
-      end=200
-      image="units/oldelvish-sylph-ftouch-attack3.png"
-    [/frame]
-  [/attack_anim]
-  [attack_anim]
-    [filter_attack]
-      name=gossamer
-    [/filter_attack]
-    [missile_frame]
-      begin=-200
-      end=50
-      image="projectiles/web.png"
-      image_diagonal="projectiles/web.png"
-    [/missile_frame]
-    [frame]
-      begin=-450
-      end=-375
-      image="units/oldelvish-sylph.png"
-      halo=halo/elven/faerie-fire-halo1.png
-      halo_x,halo_y=0,-28
-    [/frame]
-    [frame]
-      begin=-375
-      end=-300
-      image="units/oldelvish-sylph-gossamer-attack1.png"
-      halo=halo/elven/faerie-fire-halo2.png
-      halo_x,halo_y=0,-28
-    [/frame]
-    [frame]
-      begin=-300
-      end=-225
-      image="units/oldelvish-sylph-gossamer-attack2.png"
-      halo=halo/elven/faerie-fire-halo3.png
-      halo_x,halo_y=0,-28
-    [/frame]
-    [frame]
-      begin=-225
-      end=-150
-      image="units/oldelvish-sylph-gossamer-attack3.png"
-      halo=halo/elven/faerie-fire-halo4.png
-      halo_x,halo_y=0,-28
-    [/frame]
-    [frame]
-      begin=-150
-      end=-75
-      image="units/oldelvish-sylph-gossamer-attack3.png"
-      halo=halo/elven/faerie-fire-halo5.png
-      halo_x,halo_y=0,-28
-    [/frame]
-    [frame]
-      begin=-75
-      end=0
-      image="units/oldelvish-sylph-gossamer-attack2.png"
-      halo=halo/elven/faerie-fire-halo6.png
-      sound=entangle.wav
-      halo_x,halo_y=0,-28
-    [/frame]
-    [frame]
-      begin=-0
-      end=75
-      image="units/oldelvish-sylph-gossamer-attack1.png"
-      halo=halo/elven/faerie-fire-halo7.png
-      halo_x,halo_y=0,-28
-    [/frame]
-  [/attack_anim]
   [attack_anim]
     [filter_attack]
       name=faerie fire
@@ -211,7 +80,87 @@
       halo_x,halo_y=0,-28
     [/frame]
   [/attack_anim]
-  #textdomain wesnoth-The_Memories
+  [attack_anim]
+    [filter_attack]
+      name=gossamer
+    [/filter_attack]
+    [missile_frame]
+      begin=-200
+      end=50
+      image="projectiles/web.png"
+      image_diagonal="projectiles/web.png"
+    [/missile_frame]
+    [frame]
+      begin=-450
+      end=-375
+      image="units/oldelvish-sylph.png"
+      halo=halo/elven/faerie-fire-halo1.png
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-375
+      end=-300
+      image="units/oldelvish-sylph-gossamer-attack1.png"
+      halo=halo/elven/faerie-fire-halo2.png
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-300
+      end=-225
+      image="units/oldelvish-sylph-gossamer-attack2.png"
+      halo=halo/elven/faerie-fire-halo3.png
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-225
+      end=-150
+      image="units/oldelvish-sylph-gossamer-attack3.png"
+      halo=halo/elven/faerie-fire-halo4.png
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-150
+      end=-75
+      image="units/oldelvish-sylph-gossamer-attack3.png"
+      halo=halo/elven/faerie-fire-halo5.png
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-75
+      end=0
+      image="units/oldelvish-sylph-gossamer-attack2.png"
+      halo=halo/elven/faerie-fire-halo6.png
+      sound=entangle.wav
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-0
+      end=75
+      image="units/oldelvish-sylph-gossamer-attack1.png"
+      halo=halo/elven/faerie-fire-halo7.png
+      halo_x,halo_y=0,-28
+    [/frame]
+  [/attack_anim]
+  [attack_anim]
+    [filter_attack]
+      name=faerie touch
+    [/filter_attack]
+    [frame]
+      begin=-200
+      end=-100
+      image="units/oldelvish-sylph-ftouch-attack1.png"
+    [/frame]
+    [frame]
+      begin=-100
+      end=100
+      image="units/oldelvish-sylph-ftouch-attack2.png"
+    [/frame]
+    [frame]
+      begin=100
+      end=200
+      image="units/oldelvish-sylph-ftouch-attack3.png"
+    [/frame]
+  [/attack_anim]
   [advancement]
     max_times=7
     id=melee
