finished scenario The Memories

--- a/scenarios/07_The_Memories.cfg
+++ b/scenarios/07_The_Memories.cfg
@@ -89,6 +89,40 @@
       speaker=sylph
       message=_"Good. But are you really ready for it? By undergoing this ritual, you will get back all your memories. Not only the good or bad ones, every single one of them will be in your mind after we're done, you'll fell them all at once. I think this would be too strong for pretty much everyone. So do you really wish to begin with it?"
     [/message]
+    [message]
+      speaker=Elrilinde
+      message=_"That sounds quite ominous but I do not really have a choice. I <b>need</b> to regain my memories."
+    [/message]
+    [message]
+      speaker=sylph
+      message=_"Very well. Let us start then."
+    [/message]
+    [message]
+      speaker=narrator
+      image=none
+      message=_"With that, the Sylph starts reciting the incantations. Magic sparks and colors fly around her as she goes on with the ritual and as she is nearing the end, it starts moving towards Elrilindë who becomes quickly overwhelmed by it."
+    [/message]
+    [message]
+      speaker=Elrilinde
+      message=_"Ahhh ..."
+    [/message]
+    [message]
+      speaker=narrator
+      image=none
+      message=_"Elrilindë sees flashes of her life's memories in quick succession: her first steps in the forest, her defending the forest from enemies, her cruelty to and mockery of other elves, her ousting the elves who disagreed with her. She falls to the ground weeping."
+    [/message]
+    [message]
+      speaker=Elrilinde
+      message=_"No, no, no ..."
+    [/message]
+    [message]
+      speaker=sylph
+      message=_"What is wrong?"
+    [/message]
+    [message]
+      speaker=Elrilinde
+      message=_"I ... I need to go."
+    [/message]
     [store_unit]
       [filter]
         id=Elrilinde
@@ -129,6 +163,15 @@
       [/else]
     [/if]
     {CLEAR_VARIABLE temp_store}
-    {ENDLEVEL_SILENT_CONTINUE}
+    [move_unit]
+      id=Elrilinde
+      to_x=16,14,14,13,13,16,16,19,19,21,21,23,23,25,25
+      to_y=13,14,15,16,17,18,19,21,23,24,26,27,28,29,30
+      force_scroll=yes
+    [/move_unit]
+    [hide_unit]
+      id=Elrilinde
+    [/hide_unit]
+    #{ENDLEVEL_SILENT_CONTINUE}
   [/event]
 [/scenario]
