used WHISPER macro

--- a/scenarios/04b_The_Fruit.cfg
+++ b/scenarios/04b_The_Fruit.cfg
@@ -109,7 +109,7 @@
     [/message]
     [message]
       speaker=guide
-      message=_"Not at all. You do not need to fear, milady. (whispers) But I hope that the Sylph will not send us to the south."
+      message=_"Not at all. You do not need to fear, milady." + {WHISPER _" But I hope that the Sylph will not send us to the south."}
     [/message]
     [message]
       speaker=Elrilinde
