--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -322,7 +322,7 @@
     )}
     [message]
       speaker=Elrilinde
-      message=_"(whispers) I am sorry about it."
+      message={WHISPER _"I am sorry about it."}
     [/message]
     {MOVE_UNIT id=Elrilinde 23 22}
     [message]
