--- a/scenarios/05_Back_with_Sylph.cfg
+++ b/scenarios/05_Back_with_Sylph.cfg
@@ -121,7 +121,7 @@
         [/message]
         [message]
           speaker=guide
-          message=_"(whispers) I suspected that we will have to go there!"
+          message={WHISPER _"I suspected that we will have to go there!"}
         [/message]
         [message]
           speaker=sylph
