changed an <i> tag to <b>

--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -222,7 +222,7 @@
     [/message]
     [message]
       speaker=spirit2
-      message=_"Only an elf with pure heart is allowed to <i>touch</i> it."
+      message=_"Only an elf with pure heart is allowed to <b>touch</b> it."
     [/message]
     [message]
       speaker=spirit3
