silenced wmllint about some false positives

--- a/_main.cfg
+++ b/_main.cfg
@@ -17,7 +17,7 @@
   
 (Novice level, 8 playable scenarios, work in progress)" + "
 
-<span color='#888' size='smaller'>" + _ "Version:" + " {./dist/VERSION}" + "</span>"
+<span color='#888' size='smaller'>" + _ "Version:" + " {./dist/VERSION}" + "</span>" # wmllint: no spellcheck wmllint: ignore
   [about]
     title = _ "Campaign Design"
     [entry]
