used map_file instead of map_data in scenarios

--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -43,7 +43,7 @@
   id=02_Seeking_the_sylph
   name=_"Seeking the Sylph"
   next_scenario=03_The_Sylph
-  map_data="{~add-ons/The_Memories/maps/02_Seeking_the_sylph.map}"
+  map_file=02_Seeking_the_sylph.map
   turns=15
   {SCENARIO_MUSIC breaking_the_chains.ogg}
   {EXTRA_SCENARIO_MUSIC wanderer.ogg}
