--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -16,7 +16,7 @@
   id=03_The_Sylph
   name=_"The Sylph"
   next_scenario=04a_The_Leaf
-  map_data="{~add-ons/The_Memories/maps/03_The_Sylph.map}"
+  map_file=03_The_Sylph.map
   turns=15
   {SCENARIO_MUSIC elf-land.ogg}
   {DEFAULT_SCHEDULE}
