--- a/scenarios/04a_The_Leaf.cfg
+++ b/scenarios/04a_The_Leaf.cfg
@@ -6,7 +6,7 @@
   id=04a_The_Leaf
   name=_"The Leaf"
   next_scenario=05_Back_with_Sylph
-  map_data="{~add-ons/The_Memories/maps/04a_The_Leaf.map}"
+  map_file=04a_The_Leaf.map
   turns=17
   {SCENARIO_MUSIC breaking_the_chains.ogg}
   {EXTRA_SCENARIO_MUSIC wanderer.ogg}
