--- a/scenarios/04b_The_Fruit.cfg
+++ b/scenarios/04b_The_Fruit.cfg
@@ -4,7 +4,7 @@
   id=04b_The_Fruit
   name=_"The Fruit"
   next_scenario=05_Back_with_Sylph
-  map_data="{~add-ons/The_Memories/maps/04b_The_Fruit.map}"
+  map_file=04b_The_Fruit.map
   turns=17
   {SCENARIO_MUSIC breaking_the_chains.ogg}
   {EXTRA_SCENARIO_MUSIC wanderer.ogg}
