--- a/scenarios/04c_The_Vase.cfg
+++ b/scenarios/04c_The_Vase.cfg
@@ -4,7 +4,7 @@
   id=04c_The_Vase
   name=_"The Vase"
   next_scenario=05_Back_with_Sylph
-  map_data="{~add-ons/The_Memories/maps/04c_The_Vase.map}"
+  map_file=04c_The_Vase.map
   turns=17
   {SCENARIO_MUSIC breaking_the_chains.ogg}
   {EXTRA_SCENARIO_MUSIC wanderer.ogg}
