--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -44,7 +44,7 @@
   id=04d_The_Heart
   name=_"The Heart"
   next_scenario=06_The_Ritual
-  map_data="{~add-ons/The_Memories/maps/04d_The_Heart.map}"
+  map_file=04d_The_Heart.map
   turns=17
   {SCENARIO_MUSIC breaking_the_chains.ogg}
   {EXTRA_SCENARIO_MUSIC wanderer.ogg}
