--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -18,7 +18,7 @@
   id=06_The_Ritual
   name=_"The Ritual"
   next_scenario=07_The_Memories
-  map_data="{~add-ons/The_Memories/maps/03_The_Sylph.map}"
+  map_file=03_The_Sylph.map
   turns=15
   {SCENARIO_MUSIC elvish-theme.ogg}
   {DEFAULT_SCHEDULE}
