--- a/scenarios/07_The_Memories.cfg
+++ b/scenarios/07_The_Memories.cfg
@@ -4,7 +4,7 @@
   id=07_The_Memories
   name=_"The Memories"
   next_scenario=08_Xxx
-  map_data="{~add-ons/The_Memories/maps/03_The_Sylph.map}"
+  map_file=03_The_Sylph.map
   turns=1
   {SCENARIO_MUSIC elvish-theme.ogg}
   {DEFAULT_SCHEDULE}
