--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -4,7 +4,7 @@
   id=01_The_Begining
   name=_"The Beginning"
   next_scenario=02_Seeking_the_sylph
-  map_data="{~add-ons/The_Memories/maps/01_The_Begining.map}"
+  map_file=01_The_Begining.map
   turns=15
   {SCENARIO_MUSIC silvan_sanctuary.ogg}
   {DEFAULT_SCHEDULE}
