--- a/scenarios/05_Back_with_Sylph.cfg
+++ b/scenarios/05_Back_with_Sylph.cfg
@@ -4,7 +4,7 @@
   id=05_Back_with_Sylph
   name=_"Back with Sylph"
   next_scenario=04b_The_Fruit,04c_The_Vase,04d_The_Heart
-  map_data="{~add-ons/The_Memories/maps/03_The_Sylph.map}"
+  map_file=03_The_Sylph.map
   turns=1
   {SCENARIO_MUSIC elvish-theme.ogg}
   {DEFAULT_SCHEDULE}
