uncommented a commented out line

--- a/scenarios/07_The_Memories.cfg
+++ b/scenarios/07_The_Memories.cfg
@@ -172,6 +172,6 @@
     [hide_unit]
       id=Elrilinde
     [/hide_unit]
-    #{ENDLEVEL_SILENT_CONTINUE}
+    {ENDLEVEL_SILENT_CONTINUE}
   [/event]
 [/scenario]
