updated add-on's description

--- a/_server.pbl.template
+++ b/_server.pbl.template
@@ -1,7 +1,7 @@
 title="The Memories"
 description="You have just lost all your memories. Embark on a quest to regain them. But will you be able to live with them?
 
-Uncompleted"
+Beginner campaign, uncompleted (8 playable scenarios at the moment)"
 icon="units/elves-wood/sorceress.png"
 author="James_The_Invisible"
 email="jakub.konecny2@centrum.cz"
