remove the Sylph's servant in The Ritual by [kill] instead of [store_unit] it turns out that we will probably not need her later

--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -301,13 +301,11 @@
       speaker=servant
       message=_"As you say, mistress."
     [/message]
-    [store_unit]
-      [filter]
-        id=servant
-      [/filter]
-      variable=servant_store
-      kill=yes
-    [/store_unit]
+    [kill]
+      id=servant
+      animate=no
+      fire_event=no
+    [/kill]
     {ENDLEVEL_SILENT_CONTINUE}
   [/event]
 
