improved some dialogues

--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -148,7 +148,7 @@
     [/message]
     [message]
       speaker=sylph
-      message=_"Elves? I haven't had any visitors for a long time. Who are you and what are you doing here?"
+      message=_"Who comes here? ... Elves? I haven't had any visitors for a long time. Who are you and what are you doing here?"
     [/message]
     [message]
       speaker=Elrilinde
@@ -160,7 +160,11 @@
     [/message]
     [message]
       speaker=Elrilinde
-      message=_"Well."
+      message=_"Of course we will help you. We all want to protect the forest."
+    [/message]
+    [message]
+      speaker=sylph
+      message=_"Excellent. Let us crush them then."
     [/message]
     [modify_side]
       side=1
@@ -207,7 +211,7 @@
     {REPLACE_SCENARIO_MUSIC elvish-theme.ogg}
     [message]
       speaker=sylph
-      message=_"Thank you. Now tell me what can I help you with."
+      message=_"Thank you for your assistance. Now tell me what can I help you with, Elrilindë."
     [/message]
     [message]
       speaker=Elrilinde
