--- a/scenarios/04a_The_Leaf.cfg
+++ b/scenarios/04a_The_Leaf.cfg
@@ -117,7 +117,7 @@
     [/message]
     [message]
       speaker=Elrilinde
-      message=_"Ok let us look for our plant."
+      message=_"That is good to know, we have already enough on our plates. Well, so let us look for our plant."
     [/message]
   [/event]
 
