--- a/scenarios/04c_The_Vase.cfg
+++ b/scenarios/04c_The_Vase.cfg
@@ -143,11 +143,11 @@
     # starting dialog
     [message]
       speaker=Elrilinde
-      message=_"Are you really scared of this place? Why is it? What dwells here?"
+      message=_"So, we have arrived. Are you really scared of this place, Gioniel? Why is it? What dwells here?"
     [/message]
     [message]
       speaker=guide
-      message=_"(sighs) Yes, I am. I do not know what exactly dwells here but it is nothing good for sure."
+      message=_"(sighs) Yes, I am. I do not know what exactly dwells here, I have only heard some rumors but it is nothing good for sure."
     [/message]
     [message]
       speaker=Elrilinde
@@ -231,7 +231,7 @@
       [then]
         [message]
           speaker=Elrilinde
-          message=_"Ok. Let us go back to the Sylph."
+          message=_"Excellent. Let us go back to the Sylph."
         [/message]
         {ENDLEVEL_SILENT_CONTINUE}
       [/then]
@@ -250,7 +250,7 @@
       [then]
         [message]
           speaker=Elrilinde
-          message=_"Ok. Let us go back to the Sylph."
+          message=_"Excellent. Let us go back to the Sylph."
         [/message]
         [message]
           speaker=guide
@@ -304,7 +304,7 @@
       [then]
         [message]
           speaker=Elrilinde
-          message=_"Ok. Let us go back to the Sylph."
+          message=_"Excellent. Let us go back to the Sylph."
         [/message]
         {ENDLEVEL_SILENT_CONTINUE}
       [/then]
@@ -323,7 +323,7 @@
       [then]
         [message]
           speaker=Elrilinde
-          message=_"Ok. Let us go back to the Sylph."
+          message=_"Excellent. Let us go back to the Sylph."
         [/message]
         [message]
           speaker=guide
