--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -113,7 +113,7 @@
       [/objective]
       {TURNS_RUN_OUT}
       [note]
-        description = _ "Only the heroine can hit the spirits and only with ranged attack."
+        description = _ "Only the heroine can hit the spirits and only with a ranged attack."
       [/note]
     [/objectives]
     # disable heroine's melee attack for this scenario
@@ -283,7 +283,7 @@
     [/unpetrify]
     [message]
       speaker=Elrilinde
-      message=_"It was the last one. Ok now the bark."
+      message=_"It was the last one. All right, now the bark."
     [/message]
     {MOVE_UNIT id=Elrilinde 14 13}
     [store_unit]
