--- a/scenarios/05_Back_with_Sylph.cfg
+++ b/scenarios/05_Back_with_Sylph.cfg
@@ -87,7 +87,7 @@
         value=1
         [message]
           speaker=sylph
-          message=_"You returned. Do you have the leaf with you?"
+          message=_"You have returned. Do you have the leaf with you?"
         [/message]
         {MOVE_UNIT id=Elrilinde 15 11}
         [message]
