--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -116,7 +116,7 @@
     # starting dialog
     [message]
       speaker=sylph
-      message=_"You returned. Do you have the bark of the Heart with you?"
+      message=_"You have returned. Do you have the bark of the Heart with you?"
     [/message]
     {MOVE_UNIT id=Elrilinde 15 11}
     [message]
@@ -150,7 +150,7 @@
     [message]
       speaker=narrator
       message=_"A few minutes later ..."
-      image= # wmllint: ignore
+      image=none
     [/message]
     [message]
       speaker=guide
@@ -241,7 +241,7 @@
         [message]
           speaker=narrator
           message=_"With their leader dead, his remaining soldiers are not willing to fight. They run for their lives."
-          image= # wmllint: ignore
+          image=none
         [/message]
         [kill]
           side=3
