--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -140,7 +140,7 @@
     [/message]
     [message]
       speaker=Tendriel
-      message=_"I believe that you will remember them soon, milady."
+      message=_"I believe that you will remember them soon, milady, just give it a try. And do not worry, you are not alone. Everyone will fight alongside you."
     [/message]
     {MOVE_UNIT id=Tendriel 14 7}
   [/event]
@@ -192,7 +192,7 @@
     [/filter]
     [message]
       speaker=unit
-      message=_"Get away from me, human or I will harm. I do not want to do it but you are giving me no choice."
+      message=_"Get away from me, human or I will harm you. I do not want to do it but you are giving me no choice."
     [/message]
     [message]
       speaker=second_unit
@@ -302,7 +302,7 @@
       speaker=Tendriel
       message=_"Have a safe journey."
     [/message]
-    # guide for hero, next soldiers join her at the start of next scenario
+    # guide for hero, next soldiers will join her at the start of next scenario
     [unit]
       side=1
       type=Elvish Ranger
