changed current difficulty level to easy

--- a/_main.cfg
+++ b/_main.cfg
@@ -11,7 +11,7 @@
   name= _ "The Memories"
   abbrev= _ "TM"
   define=THE_MEMORIES
-  {CAMPAIGN_DIFFICULTY NORMAL "data/add-ons/The_Memories/images/units/oldelvish-sorceress.png" _"Elvish Sorceress"  _"Normal"} {DEFAULT_DIFFICULTY}
+  {CAMPAIGN_DIFFICULTY EASY "data/add-ons/The_Memories/images/units/oldelvish-sorceress.png" _"Elvish Sorceress"  _"Easy"} {DEFAULT_DIFFICULTY}
   first_scenario="01_The_Begining"
   description=_"You are a powerful sorceress and defender of this forest. At least, these elves say it. You have no memories about your life, abilities and the place what you are at. Begin your quest to regain them right now. But will you be able to live with them?
   
