used who magical comments for wmllint

--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -97,6 +97,7 @@
 
   [event]
     name=start
+    # wmllint: who RECALL_HEROES is guide
     # wmllint: recognize guide
     # recall the guide
     {RECALL_HEROES}
