--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -109,8 +109,7 @@
 
   [event]
     name=start
-    # wmllint: recognize guide
-    # wmllint: recognize druid
+    # wmllint: who RECALL_HEROES is druid
     # recall the guide and loyal elves
     {RECALL_HEROES}
     # starting dialog
