--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -8,23 +8,24 @@
     generate_name=yes
     random_traits=yes
     random_gender=yes
-    upkeep=loyal
-    overlays="misc/loyal-icon.png"
     x,y={X},{Y}
     animate=no
-    to_variable=temp_store
+    advances_to={ADVANCES_TO}
     [variables]
       to_recall=yes
     [/variables]
+    [modifications]
+      [object]
+        [effect]
+          apply_to=loyal
+        [/effect]
+        [effect]
+          apply_to=overlay
+          add="misc/loyal-icon.png"
+        [/effect]
+      [/object]
+    [/modifications]
   [/unit]
-  {VARIABLE temp_store.advances_to {ADVANCES_TO}}
-  [unstore_unit]
-    variable=temp_store
-    find_vacant=no
-  [/unstore_unit]
-  {CLEAR_VARIABLE temp_store}
-  [redraw]
-  [/redraw]
 #enddef
 
 #define WILD_WOLF X Y
