do not use deprecated [unit] placement=map_passable

--- a/scenarios/04c_The_Vase.cfg
+++ b/scenarios/04c_The_Vase.cfg
@@ -362,7 +362,8 @@
       unrenamable=yes
       experience=55
       x,y=9,12
-      placement=map_passable
+      placement=map
+      passable=yes
       [modifications]
         {TRAIT_LOYAL}
       [/modifications]
