--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -9,7 +9,8 @@
     id={ID}
     name=_"A spirit of the forest"
     x,y={X},{Y}
-    placement=map_passable
+    placement=map
+    passable=yes
     upkeep=loyal
     ai_special=guardian
     # they have more hitpoints and stronger ranged attack than mere ghosts
