--- a/_main.cfg
+++ b/_main.cfg
@@ -24,6 +24,29 @@
       name="James_The_Invisible"
     [/entry]
   [/about]
+  [event]
+    name=die
+    first_time_only=no
+    [filter]
+      race=wolf
+    [/filter]
+    [filter_second]
+      side=1
+    [/filter_second]
+    {VARIABLE_OP forest_creatures_killed add 1}
+    [if]
+      [variable]
+        name=forest_creatures_killed
+        equals=15
+      [/variable]
+      [then]
+        [set_achievement]
+          content_for=The_Memories
+          id=on_the_hunt
+        [/set_achievement]
+      [/then]
+    [/if]
+  [/event]
 [/campaign]
 
 #ifdef THE_MEMORIES
