--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -143,6 +143,8 @@
       message=_"I believe that you will remember them soon, milady, just give it a try. And do not worry, you are not alone. Everyone will fight alongside you."
     [/message]
     {MOVE_UNIT id=Tendriel 14 7}
+    {VARIABLE units_killed 0}
+    {VARIABLE forest_creatures_killed 0}
   [/event]
 
   [event]
@@ -302,6 +304,11 @@
       speaker=Tendriel
       message=_"Have a safe journey."
     [/message]
+    {ENDLEVEL_SILENT_CONTINUE}
+  [/event]
+  
+  [event]
+    name=victory
     # guide for hero, next soldiers will join her at the start of next scenario
     [unit]
       side=1
@@ -317,7 +324,19 @@
       random_traits=yes
       {IS_HERO}
     [/unit]
-    {ENDLEVEL_SILENT_CONTINUE}
+    [if]
+      [variable]
+        name=units_killed
+        equals=0
+      [/variable]
+      [then]
+        [set_achievement]
+          content_for=The_Memories
+          id=pacifist
+        [/set_achievement]
+      [/then]
+    [/if]
+    {CLEAR_VARIABLE units_killed}
   [/event]
 
   # easter egg
@@ -342,6 +361,43 @@
     [scroll_to_unit]
       id=Elrilinde
     [/scroll_to_unit]
+  [/event]
+  
+  [event]
+    name=die
+    first_time_only=no
+    [filter]
+      side=3
+      canrecruit=no
+    [/filter]
+    [filter_second]
+      id=Elrilinde
+    [/filter_second]
+    {VARIABLE_OP units_killed add 1}
+    [if]
+      [variable]
+        name=units_killed
+        equals=1
+      [/variable]
+      [then]
+        [set_achievement]
+          content_for=The_Memories
+          id=first_blood
+        [/set_achievement]
+      [/then]
+      [elseif]
+        [variable]
+          name=units_killed
+          equals=5
+        [/variable]
+        [then]
+          [set_achievement]
+            content_for=The_Memories
+            id=bloodthirsty
+          [/set_achievement]
+        [/then]
+      [/elseif]
+    [/if]
   [/event]
 
   [event]
