--- a/scenarios/04b_The_Fruit.cfg
+++ b/scenarios/04b_The_Fruit.cfg
@@ -177,6 +177,12 @@
       message=_"Very well. Let us take the fruit and go back to the Sylph."
     [/message]
     {VARIABLE_OP items_collected add 1}
+    [progress_achievement]
+      content_for=The_Memories
+      id=sylphs_tasks
+      amount=1
+      limit=2
+    [/progress_achievement]
     {ENDLEVEL_SILENT_CONTINUE}
   [/event]
 
