--- a/scenarios/04c_The_Vase.cfg
+++ b/scenarios/04c_The_Vase.cfg
@@ -433,6 +433,12 @@
     name=victory
     {CLEAR_VARIABLE druid_freed,vase_taken,monsters_killed}
     {VARIABLE_OP items_collected add 1}
+    [progress_achievement]
+      content_for=The_Memories
+      id=sylphs_tasks
+      amount=1
+      limit=3
+    [/progress_achievement]
   [/event]
 
   {GENERIC_DEATHS1}
