--- a/scenarios/07_The_Memories.cfg
+++ b/scenarios/07_The_Memories.cfg
@@ -102,6 +102,10 @@
       image=none
       message=_"With that, the Sylph starts reciting the incantations. Magic sparks and colors fly around her as she goes on with the ritual and as she is nearing the end, it starts moving towards Elrilindë who becomes quickly overwhelmed by it."
     [/message]
+    [set_achievement]
+      content_for=The_Memories
+      id=memories_regained
+    [/set_achievement]
     [message]
       speaker=Elrilinde
       message=_"Ahhh ..."
