--- a/scenarios/04a_The_Leaf.cfg
+++ b/scenarios/04a_The_Leaf.cfg
@@ -187,6 +187,12 @@
       message=_"Very well. Let us take one leaf and go back to the Sylph."
     [/message]
     {VARIABLE_OP items_collected add 1}
+    [progress_achievement]
+      content_for=The_Memories
+      id=sylphs_tasks
+      amount=1
+      limit=1
+    [/progress_achievement]
     {ENDLEVEL_SILENT_CONTINUE}
   [/event]
 
