--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -396,6 +396,10 @@
     [/unstore_unit]
     {CLEAR_VARIABLE temp_store,i}
     {VARIABLE_OP items_collected add 1}
+    [set_achievement]
+      content_for=The_Memories
+      id=sylphs_tasks
+    [/set_achievement]
     [unpetrify]
       id=guide
     [/unpetrify]
