made enemies in scenarios 2, 4a and 4b more diverse (and random), this closes #1

--- a/_main.cfg
+++ b/_main.cfg
@@ -28,7 +28,10 @@
     name=die
     first_time_only=no
     [filter]
-      race=wolf
+      race=wolf,monster
+      [not]
+        type_adv_tree=Mudcrawler
+      [/not]
     [/filter]
     [filter_second]
       side=1
