--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -28,18 +28,6 @@
   [/unit]
 #enddef
 
-#define WILD_WOLF X Y
-  [unit]
-    side=2
-    type=Wolf
-    generate_name=yes
-    random_traits=yes
-    upkeep=loyal
-    x,y={X},{Y}
-    animate=no
-  [/unit]
-#enddef
-
 [scenario]
   id=02_Seeking_the_sylph
   name=_"Seeking the Sylph"
@@ -107,12 +95,12 @@
     {LOYAL_ELF (Elvish Archer) elf2 41 17 (Elvish Marksman)}
     {LOYAL_ELF (Elvish Archer) elf3 42 17 (Elvish Marksman)}
     # place some wild animals
-    {WILD_WOLF 26 30}
-    {WILD_WOLF 30 31}
-    {WILD_WOLF 23 32}
-    {WILD_WOLF 27 33}
-    {WILD_WOLF 15 33}
-    {WILD_WOLF 7 3}
+    {FOREST_CREATURE 26 30}
+    {FOREST_CREATURE 30 31}
+    {FOREST_CREATURE 23 32}
+    {FOREST_CREATURE 27 33}
+    {FOREST_CREATURE 15 33}
+    {FOREST_CREATURE 7 3}
     # starting dialogue
     [message]
       speaker=Elrilinde
