--- a/scenarios/04b_The_Fruit.cfg
+++ b/scenarios/04b_The_Fruit.cfg
@@ -87,12 +87,12 @@
     # recall the guide and loyal elves
     {RECALL_HEROES}
     # place some wild animals
-    {WILD_WOLF 11 23}
-    {WILD_WOLF 13 23}
-    {WILD_WOLF 15 23}
-    {WILD_WOLF 13 21}
-    {WILD_WOLF 4 11}
-    {WILD_WOLF 6 8}
+    {FOREST_CREATURE 11 23}
+    {FOREST_CREATURE 13 23}
+    {FOREST_CREATURE 15 23}
+    {FOREST_CREATURE 13 21}
+    {FOREST_CREATURE 4 11}
+    {FOREST_CREATURE 6 8}
     # starting dialog
     [message]
       speaker=Elrilinde
