--- a/utils/misc.cfg
+++ b/utils/misc.cfg
@@ -74,3 +74,17 @@
     carryover_percentage=0
   [/endlevel]
 #enddef
+
+#define FOREST_CREATURE X Y
+  {RANDOM "Wolf,Wolf,Wolf,Wolf,Soldier Ant,Soldier Ant,Fire Ant,Dragonfly"}
+  [unit]
+    side=2
+    type=$random
+    generate_name=yes
+    random_traits=yes
+    upkeep=loyal
+    x,y={X},{Y}
+    animate=no
+  [/unit]
+  {CLEAR_VARIABLE random}
+#enddef
