--- a/scenarios/04a_The_Leaf.cfg
+++ b/scenarios/04a_The_Leaf.cfg
@@ -91,12 +91,12 @@
     # recall the guide and loyal elves
     {RECALL_HEROES}
     # place some wild animals
-    {WILD_WOLF 16 4}
-    {WILD_WOLF 18 4}
-    {WILD_WOLF 20 4}
-    {WILD_WOLF 18 5}
-    {WILD_WOLF 4 6}
-    {WILD_WOLF 3 8}
+    {FOREST_CREATURE 16 4}
+    {FOREST_CREATURE 18 4}
+    {FOREST_CREATURE 20 4}
+    {FOREST_CREATURE 18 5}
+    {FOREST_CREATURE 4 6}
+    {FOREST_CREATURE 3 8}
     # starting dialog
     [message]
       speaker=Elrilinde
