--- a/_main.cfg
+++ b/_main.cfg
@@ -7,7 +7,7 @@
 [campaign]
   id=The_Memories
   icon="data/add-ons/The_Memories/images/units/oldelvish-sylph-ftouch-attack2.png"
-  image="portraits/elves/sorceress.png"
+  image="portraits/elves/sorceress.webp"
   name= _ "The Memories"
   abbrev= _ "TM"
   define=THE_MEMORIES
