set background for campaign

--- a/_main.cfg
+++ b/_main.cfg
@@ -18,6 +18,7 @@
 (Novice level, 8 playable scenarios, work in progress)" + "
 
 <span color='#888' size='smaller'>" + _ "Version:" + " {./dist/VERSION}" + "</span>" # wmllint: no spellcheck wmllint: ignore
+  background="data/core/images/story/landscape-mountains-04.webp"
   [about]
     title = _ "Campaign Design"
     [entry]
