reorganized heroine's amlas they now follow pattern attack + attack_speed, merged amlas for faerie fire where possible

--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -177,7 +177,7 @@
   [/advancement]
   [advancement]
     max_times=1
-    id=melee2
+    id=melee_speed
     description= _ "faster at melee combat"
     image="attacks/touch-faerie.png"
     strict_amla=yes
@@ -206,7 +206,7 @@
   [/advancement]
   [advancement]
     max_times=1
-    id=web2
+    id=web_speed
     description= _ "faster with spiderwebs"
     image="attacks/web.png"
     strict_amla=yes
@@ -220,9 +220,9 @@
     {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
   [advancement]
-    max_times=1
+    max_times=4
     always_display=yes
-    id=faerie1
+    id=faerie
     description= _ "causing more havoc with faerie fire"
     image=attacks/faerie-fire.png
     strict_amla=yes
@@ -235,13 +235,13 @@
     {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
   [advancement]
-    max_times=1
+    max_times=2
     always_display=yes
-    id=faerie2
+    id=faerie_speed
     description= _ "faster with faerie fire"
     image=attacks/faerie-fire.png
     strict_amla=yes
-    require_amla="faerie1"
+    require_amla="faerie"
     [effect]
       apply_to=attack
       name=faerie fire
@@ -253,72 +253,11 @@
   [advancement]
     max_times=1
     always_display=yes
-    id=faerie3
-    description= _ "causing more havoc with faerie fire"
-    image=attacks/faerie-fire.png
-    strict_amla=yes
-    require_amla="faerie1,faerie2"
-    [effect]
-      apply_to=attack
-      name=faerie fire
-      increase_damage=1
-    [/effect]
-    {GREATER_AMLA_DEFAULT_BONUSES}
-  [/advancement]
-  [advancement]
-    max_times=1
-    always_display=yes
-    id=faerie3_speed
+    id=faerie_speed2
     description= _ "faster with faerie fire"
     image=attacks/faerie-fire.png
     strict_amla=yes
-    require_amla="faerie1,faerie2,faerie3"
-    [effect]
-      apply_to=attack
-      name=faerie fire
-      increase_attacks=1
-      increase_damage=-1
-    [/effect]
-    {GREATER_AMLA_DEFAULT_BONUSES}
-  [/advancement]
-  [advancement]
-    max_times=1
-    always_display=yes
-    id=faerie4
-    description= _ "causing more havoc with faerie fire"
-    image=attacks/faerie-fire.png
-    strict_amla=yes
-    require_amla="faerie1,faerie2,faerie3"
-    [effect]
-      apply_to=attack
-      name=faerie fire
-      increase_damage=1
-    [/effect]
-    {GREATER_AMLA_DEFAULT_BONUSES}
-  [/advancement]
-  [advancement]
-    max_times=1
-    always_display=yes
-    id=faerie5
-    description= _ "causing more havoc with faerie fire"
-    image=attacks/faerie-fire.png
-    strict_amla=yes
-    require_amla="faerie1,faerie2,faerie3,faerie4"
-    [effect]
-      apply_to=attack
-      name=faerie fire
-      increase_damage=1
-    [/effect]
-    {GREATER_AMLA_DEFAULT_BONUSES}
-  [/advancement]
-  [advancement]
-    max_times=1
-    always_display=yes
-    id=faerie5_speed
-    description= _ "faster with faerie fire"
-    image=attacks/faerie-fire.png
-    strict_amla=yes
-    require_amla="faerie1,faerie2,faerie3,faerie4,faerie5"
+    require_amla="faerie,faerie,faerie,faerie_speed,faerie_speed"
     [effect]
       apply_to=attack
       name=faerie fire
