fixed some wmllint's issues

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -332,7 +332,7 @@
       [then]
         [set_achievement]
           content_for=The_Memories
-          id=pacifist
+          id=pacifist # wmllint: ignore
         [/set_achievement]
       [/then]
     [/if]
@@ -382,7 +382,7 @@
       [then]
         [set_achievement]
           content_for=The_Memories
-          id=first_blood
+          id=first_blood # wmllint: ignore
         [/set_achievement]
       [/then]
       [elseif]
@@ -393,7 +393,7 @@
         [then]
           [set_achievement]
             content_for=The_Memories
-            id=bloodthirsty
+            id=bloodthirsty # wmllint: ignore
           [/set_achievement]
         [/then]
       [/elseif]
