--- a/scenarios/04a_The_Leaf.cfg
+++ b/scenarios/04a_The_Leaf.cfg
@@ -189,7 +189,7 @@
     {VARIABLE_OP items_collected add 1}
     [progress_achievement]
       content_for=The_Memories
-      id=sylphs_tasks
+      id=sylphs_tasks # wmllint: ignore
       amount=1
       limit=1
     [/progress_achievement]
