--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -398,7 +398,7 @@
     {VARIABLE_OP items_collected add 1}
     [set_achievement]
       content_for=The_Memories
-      id=sylphs_tasks
+      id=sylphs_tasks # wmllint: ignore
     [/set_achievement]
     [unpetrify]
       id=guide
