--- a/scenarios/07_The_Memories.cfg
+++ b/scenarios/07_The_Memories.cfg
@@ -104,7 +104,7 @@
     [/message]
     [set_achievement]
       content_for=The_Memories
-      id=memories_regained
+      id=memories_regained # wmllint: ignore
     [/set_achievement]
     [message]
       speaker=Elrilinde
