--- a/achievements.cfg
+++ b/achievements.cfg
@@ -1,19 +1,19 @@
 #textdomain wesnoth-The_Memories
 [achievement_group]
   content_for=The_Memories
-  display_name=_"The Memories"
+  display_name=_"The Memories" # wmllint: ignore
   [achievement]
     id=first_blood
     name=_"First Blood"
     description=_"Kill an enemy unit in the first scenario."
-    description_completed=_"You have killed a human. It will probably not be the last one."
+    description_completed=_"You have killed a human. It will probably not be the last one." # wmllint: ignore
     icon="data/core/images/projectiles/fire-burst-small-8.png"
   [/achievement]
   [achievement]
     id=pacifist
     name=_"Pacifist"
     description=_"Complete the first scenario with killing any enemy unit."
-    description_completed=_"You got to the humans' leader without killing anyone."
+    description_completed=_"You got to the humans' leader without killing anyone." # wmllint: ignore
     icon="data/core/images/halo/elven/druid-healing4.png"
     hidden=yes
   [/achievement]
@@ -28,14 +28,14 @@
     id=on_the_hunt
     name=_"On the Hunt"
     description=_"Kill at least 15 forest creatures."
-    description_completed=_"You have killed all creatures in the forest."
+    description_completed=_"You have killed all creatures in the forest." # wmllint: ignore
     icon="data/core/images/attacks/bow-elven.png"
   [/achievement]
   [achievement]
     id=sylphs_tasks
     name=_"Herculean Tasks"
     description=_"Complete the Sylph's tasks."
-    description_completed=_"You have completed all the Sylph's tasks."
+    description_completed=_"You have completed all the Sylph's tasks." # wmllint: ignore
     icon="data/core/images/attacks/touch-faerie.png"
     max_progress=4
   [/achievement]
@@ -43,7 +43,7 @@
     id=memories_regained
     name=_"Memories Regained"
     description=_"Regain your memories."
-    description_completed=_"You have regained your memories. Congratulations?"
+    description_completed=_"You have regained your memories. Congratulations?" # wmllint: ignore
     icon="data/core/images/halo/mage-halo5.png"
   [/achievement]
 [/achievement_group]
