--- a/scenarios/04b_The_Fruit.cfg
+++ b/scenarios/04b_The_Fruit.cfg
@@ -179,7 +179,7 @@
     {VARIABLE_OP items_collected add 1}
     [progress_achievement]
       content_for=The_Memories
-      id=sylphs_tasks
+      id=sylphs_tasks # wmllint: ignore
       amount=1
       limit=2
     [/progress_achievement]
