--- a/scenarios/04c_The_Vase.cfg
+++ b/scenarios/04c_The_Vase.cfg
@@ -435,7 +435,7 @@
     {VARIABLE_OP items_collected add 1}
     [progress_achievement]
       content_for=The_Memories
-      id=sylphs_tasks
+      id=sylphs_tasks # wmllint: ignore
       amount=1
       limit=3
     [/progress_achievement]
