nerf down a bit the heroine's stats as they will be on Wesnoth 1.19/1.20

--- a/units/Enchantress.cfg
+++ b/units/Enchantress.cfg
@@ -7,6 +7,18 @@
     [/base_unit]
     image="units/oldelvish-enchantress.png"
     advances_to=null
+#ifver WESNOTH_VERSION < 1.19.0
+    experience=180
+    cost=62
+    [attack]
+    [/attack]
+    [attack]
+        damage=6
+    [/attack]
+    [attack]
+        damage=11
+    [/attack]
+#endif
     {DEFENSE_ANIM_RANGE "units/oldelvish-enchantress-ranged-defend.png" "units/oldelvish-enchantress-defend.png" {SOUND_LIST:ELF_FEMALE_HIT} melee }
     {DEFENSE_ANIM_ELVEN_RANGE "units/oldelvish-enchantress-ranged-defend.png" "units/oldelvish-enchantress-defend.png" {SOUND_LIST:ELF_FEMALE_HIT} ranged }
     [attack_anim]
