--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -8,6 +8,16 @@
     image="units/oldelvish-sylph.png"
     experience=70
     advances_to=null
+#ifver WESNOTH_VERSION < 1.19.0
+    cost=135
+    [attack]
+    [/attack]
+    [attack]
+    [/attack]
+    [attack]
+        damage=13
+    [/attack]
+#endif
     {DEFENSE_ANIM_FILTERED "units/oldelvish-sylph-defend.png" "units/oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} range=melee }
     {DEFENSE_ANIM_FILTERED "units/oldelvish-sylph-defend.png" "units/oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} range=ranged }
     [attack_anim]
