--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - test
+  - announce
 
 .test_job: &test_job
   stage: test
@@ -7,8 +8,30 @@ stages:
   script:
     - wmllint --dryrun /usr/share/games/wesnoth/data/core .
 
+.publish_job: &publish_job
+  stage: publish
+  script:
+    - wesnoth_addon_manager -u . --port $SERVER_PORT --pbl-key passphrase $ADDON_PASSPHRASE
+  only:
+    - tags@konecnyjakub/The_Memories
+  environment:
+    name: addons/$WESNOTH_VERSION
+    url: https://add-ons.wesnoth.org/$WESNOTH_VERSION/
+
 test:1.18:
   <<: *test_job
   image: konecnyjakub/wesnoth:1.18
   variables:
     WESNOTH_VERSION: "1.18"
+
+announce:gitlab:
+  stage: announce
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  only:
+    - tags@konecnyjakub/The_Memories
+  script:
+    - echo "Creating GitLab release"
+  release:
+    tag_name: $CI_COMMIT_TAG
+    name: "The Memories $CI_COMMIT_TAG"
+    description: "./dist/RELEASE_NOTES"
