give the Sylph almost all villages in scenarios 3

--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -65,19 +65,6 @@
         {FLAG_VARIANT wood-elvish}
         gold=80
         income=-1
-
-        [village]
-            x,y=17,8
-        [/village]
-        [village]
-            x,y=9,9
-        [/village]
-        [village]
-            x,y=12,12
-        [/village]
-        [village]
-            x,y=17,13
-        [/village]
     [/side]
 
     [side]
@@ -118,6 +105,10 @@
         {ENEMY Horseman 13 24}
         {ENEMY Horseman 17 24}
         {ENEMY Duelist 15 24}
+        [capture_village]
+            side=2
+            owner_side=0
+        [/capture_village]
         [objectives]
             side=1
             [objective]
