added a short delay at start of scenario 8

--- a/scenarios/08_Remorse.cfg
+++ b/scenarios/08_Remorse.cfg
@@ -54,6 +54,9 @@
 
     [event]
         name=start
+        [delay]
+            time=1800
+        [/delay]
         [unhide_unit]
             id=Tendriel
         [/unhide_unit]
