use general spellings for wmllint

--- a/_main.cfg
+++ b/_main.cfg
@@ -68,5 +68,5 @@
 
 #endif
 
-# wmllint: directory spellings Elrilindë Gioniel Tináclya Tendriel
-# wmllint: directory spellings elven ok dextrous
+# wmllint: general spellings Elrilindë Gioniel Tináclya Tendriel
+# wmllint: general spellings elven ok dextrous
