select the heroine after first kill in scenario 1 instead of just scrolling to her

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -356,10 +356,9 @@
             speaker=Tendriel
             message=_"Me neither, milady. But we must get to their leader and they are blocking our way."
         [/message]
-        # scroll back to her
-        [scroll_to_unit]
+        [select_unit]
             id=Elrilinde
-        [/scroll_to_unit]
+        [/select_unit]
     [/event]
 
     [event]
