updated animations for heroine defense animations in core now use different macros and order of attack animations was changed

--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -18,8 +18,8 @@
         damage=13
     [/attack]
 #endif
-    {DEFENSE_ANIM_FILTERED "units/oldelvish-sylph-defend.png" "units/oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} range=melee }
-    {DEFENSE_ANIM_FILTERED "units/oldelvish-sylph-defend.png" "units/oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} range=ranged }
+    {DEFENSE_ANIM_RANGE "units/oldelvish-sylph-defend.png" "units/oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} melee }
+    {DEFENSE_ANIM_ELVEN_RANGE "units/oldelvish-sylph-defend.png" "units/oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} ranged }
     [attack_anim]
         [filter_attack]
             name=faerie fire
