--- a/units/Sorceress.cfg
+++ b/units/Sorceress.cfg
@@ -7,49 +7,78 @@
     [/base_unit]
     image="units/oldelvish-sorceress.png"
     advances_to=Elrilinde Elvish Enchantress
-    {DEFENSE_ANIM_FILTERED "units/oldelvish-sorceress-defend.png" "units/oldelvish-sorceress.png" {SOUND_LIST:ELF_FEMALE_HIT} range=melee }
-    {DEFENSE_ANIM_FILTERED "units/oldelvish-sorceress-defend.png" "units/oldelvish-sorceress.png" {SOUND_LIST:ELF_FEMALE_HIT} range=ranged }
+    {DEFENSE_ANIM_RANGE "units/oldelvish-sorceress-defend.png" "units/oldelvish-sorceress.png" {SOUND_LIST:ELF_FEMALE_HIT} melee }
+    {DEFENSE_ANIM_ELVEN_RANGE "units/oldelvish-sorceress-defend.png" "units/oldelvish-sorceress.png" {SOUND_LIST:ELF_FEMALE_HIT} ranged }
     [attack_anim]
         [filter_attack]
-            name=staff
+            name=faerie fire
         [/filter_attack]
-        [frame]
-            begin=-200
-            end=-175
-            image="units/oldelvish-sorceress-melee1.png"
-        [/frame]
-        [frame]
-            begin=-175
-            end=-125
-            image="units/oldelvish-sorceress-melee2.png"
-        [/frame]
+        {MISSILE_FRAME_FAERIE_FIRE}
         [if]
             hits=yes
             [frame]
-                begin=-125
-                end=50
-                image="units/oldelvish-sorceress-melee3.png"
-                sound=staff.wav
+                begin=-450
+                end=-375
+                image="units/oldelvish-sorceress-attack1.png"
+                sound=magic-faeriefire.ogg
+
+                halo=halo/elven/faerie-fire-halo1.png
+                halo_x,halo_y=0,-28
             [/frame]
         [/if]
         [else]
             hits=no
             [frame]
-                begin=-125
-                end=50
-                image="units/oldelvish-sorceress-melee3.png"
-                sound={SOUND_LIST:MISS}
+                begin=-450
+                end=-375
+                image="units/oldelvish-sorceress-attack1.png"
+                sound=magic-faeriefire-miss.ogg
+
+                halo=halo/elven/faerie-fire-halo1.png
+                halo_x,halo_y=0,-28
             [/frame]
         [/else]
         [frame]
-            begin=50
-            end=100
-            image="units/oldelvish-sorceress-melee4.png"
+            begin=-375
+            end=-300
+            image="units/oldelvish-sorceress-attack2.png"
+            halo=halo/elven/faerie-fire-halo2.png
+            halo_x,halo_y=0,-28
         [/frame]
         [frame]
-            begin=100
-            end=150
-            image="units/oldelvish-sorceress-melee5.png"
+            begin=-300
+            end=-225
+            image="units/oldelvish-sorceress-attack3.png"
+            halo=halo/elven/faerie-fire-halo3.png
+            halo_x,halo_y=0,-28
+        [/frame]
+        [frame]
+            begin=-225
+            end=-150
+            image="units/oldelvish-sorceress-attack4.png"
+            halo=halo/elven/faerie-fire-halo4.png
+            halo_x,halo_y=0,-28
+        [/frame]
+        [frame]
+            begin=-150
+            end=-75
+            image="units/oldelvish-sorceress-attack5.png"
+            halo=halo/elven/faerie-fire-halo5.png
+            halo_x,halo_y=0,-28
+        [/frame]
+        [frame]
+            begin=-75
+            end=0
+            image="units/oldelvish-sorceress-attack6.png"
+            halo=halo/elven/faerie-fire-halo6.png
+            halo_x,halo_y=0,-28
+        [/frame]
+        [frame]
+            begin=-0
+            end=75
+            image="units/oldelvish-sorceress-attack7.png"
+            halo=halo/elven/faerie-fire-halo7.png
+            halo_x,halo_y=0,-28
         [/frame]
     [/attack_anim]
     [attack_anim]
@@ -123,74 +152,45 @@
     [/attack_anim]
     [attack_anim]
         [filter_attack]
-            name=faerie fire
+            name=staff
         [/filter_attack]
-        {MISSILE_FRAME_FAERIE_FIRE}
+        [frame]
+            begin=-200
+            end=-175
+            image="units/oldelvish-sorceress-melee1.png"
+        [/frame]
+        [frame]
+            begin=-175
+            end=-125
+            image="units/oldelvish-sorceress-melee2.png"
+        [/frame]
         [if]
             hits=yes
             [frame]
-                begin=-450
-                end=-375
-                image="units/oldelvish-sorceress-attack1.png"
-                sound=magic-faeriefire.ogg
-
-                halo=halo/elven/faerie-fire-halo1.png
-                halo_x,halo_y=0,-28
+                begin=-125
+                end=50
+                image="units/oldelvish-sorceress-melee3.png"
+                sound=staff.wav
             [/frame]
         [/if]
         [else]
             hits=no
             [frame]
-                begin=-450
-                end=-375
-                image="units/oldelvish-sorceress-attack1.png"
-                sound=magic-faeriefire-miss.ogg
-
-                halo=halo/elven/faerie-fire-halo1.png
-                halo_x,halo_y=0,-28
+                begin=-125
+                end=50
+                image="units/oldelvish-sorceress-melee3.png"
+                sound={SOUND_LIST:MISS}
             [/frame]
         [/else]
         [frame]
-            begin=-375
-            end=-300
-            image="units/oldelvish-sorceress-attack2.png"
-            halo=halo/elven/faerie-fire-halo2.png
-            halo_x,halo_y=0,-28
+            begin=50
+            end=100
+            image="units/oldelvish-sorceress-melee4.png"
         [/frame]
         [frame]
-            begin=-300
-            end=-225
-            image="units/oldelvish-sorceress-attack3.png"
-            halo=halo/elven/faerie-fire-halo3.png
-            halo_x,halo_y=0,-28
-        [/frame]
-        [frame]
-            begin=-225
-            end=-150
-            image="units/oldelvish-sorceress-attack4.png"
-            halo=halo/elven/faerie-fire-halo4.png
-            halo_x,halo_y=0,-28
-        [/frame]
-        [frame]
-            begin=-150
-            end=-75
-            image="units/oldelvish-sorceress-attack5.png"
-            halo=halo/elven/faerie-fire-halo5.png
-            halo_x,halo_y=0,-28
-        [/frame]
-        [frame]
-            begin=-75
-            end=0
-            image="units/oldelvish-sorceress-attack6.png"
-            halo=halo/elven/faerie-fire-halo6.png
-            halo_x,halo_y=0,-28
-        [/frame]
-        [frame]
-            begin=-0
-            end=75
-            image="units/oldelvish-sorceress-attack7.png"
-            halo=halo/elven/faerie-fire-halo7.png
-            halo_x,halo_y=0,-28
+            begin=100
+            end=150
+            image="units/oldelvish-sorceress-melee5.png"
         [/frame]
     [/attack_anim]
 [/unit_type]
